# vega_cpp_for_algotrading

./: .gitignore  CMakeLists.txt  main.cpp  my_add.cpp  test_add.cpp
.github/workflows/: test.yaml
docs/: doxyfile
src/: main.cpp  my_add.hpp
tests/: benchmark_run.cpp  test_add.cpp
